# efiloClient0214

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  prisma.config.ts
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: c2949bec545d_initial_baseline.py
backend/app/: config.py  dependencies.py  main.py
backend/app/auth/: dev_auth.py  jwt.py  rate_limit.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  change.py  closeout.py  compliance.py  document.py  enterprise.py  enums.py  health.py  helpers.py  meeting.py  notification.py  organization.py  project.py  rfi.py  search.py  user.py
backend/app/routers/: auth.py  changes.py  chat.py  compliance.py  documents.py  health.py  projects.py  rfis.py  search.py  settings.py
backend/app/schemas/: common.py  compliance.py  document.py  project.py  rfi.py  search.py  settings.py
backend/app/services/: ai.py  docling_client.py  document_processing.py  email.py  embeddings.py  r2.py  search_orchestration.py  vector_search.py  vision.py
backend/app/services/compliance/: __init__.py  alerts.py  calculator.py  deadlines.py  holidays.py  integrations.py  notices.py  parser.py  prompts.py  scoring.py  severity.py
backend/app/tasks/: celery_app.py  compliance_crons.py  document_ingestion.py  rfi_aging.py
docs/: AI_SERVICE.md  Compliance_Engine_Overview.pptx  SCHEMA.md  SEARCH.md  efilo_deployment_strategy.pptx  efilo_tech_stack.pptx
frontend/: components.json  (+2 more)
(+195 files in other folders)
